--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = bapeltandevelopmentsmartfarming
+PRODUCT_NAME = SmartFarming Bapeltan
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.bapeltandevelopmentsmartfarming
+PRODUCT_BUNDLE_IDENTIFIER = com.bapeltan.smartfarming
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 Bapeltan. All rights reserved.
