--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   connectivity_plus: ^5.0.0
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0
